--- a/public/bower.json
+++ b/public/bower.json
@@ -20,6 +20,7 @@
     "jquery-validation": "~1.13.1",
     "bootbox": "~4.4.0",
     "typeahead.js": "~0.10.5",
-    "select2": "~3.5.2"
+    "select2": "~3.5.2",
+    "jquery-ujs": "~1.0.3"
   }
 }
