--- a/public/bower.json
+++ b/public/bower.json
@@ -24,6 +24,7 @@
     "jquery-ujs": "~1.0.3",
     "angular": "~1.3.15",
     "dependent-dropdown": "~1.4.0",
-    "jquery-cascading-dropdown": "~1.2.6"
+    "jquery-cascading-dropdown": "~1.2.6",
+    "bootstrap-toggle": "~2.2.0"
   }
 }
