--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
 	"require": {
 		"laravel/framework": "4.2.*",
 		"cartalyst/sentry": "2.1.*",
-		"webpatser/laravel-uuid": "1.*"
+		"webpatser/laravel-uuid": "1.*",
+        "twilio/sdk": "dev-master"
 	},
 	"require-dev": {
 	    "way/generators": "~2.0"
@@ -16,6 +17,7 @@
 			"app/commands",
 			"app/controllers",
 			"app/models",
+            "app/services",
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
