--- a/public/bower.json
+++ b/public/bower.json
@@ -25,6 +25,7 @@
     "angular": "~1.3.15",
     "dependent-dropdown": "~1.4.0",
     "jquery-cascading-dropdown": "~1.2.6",
-    "bootstrap-toggle": "~2.2.0"
+    "bootstrap-toggle": "~2.2.0",
+    "jquery-tree": "*"
   }
 }
