--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 		"laravel/framework": "4.2.*",
 		"cartalyst/sentry": "2.1.*",
 		"webpatser/laravel-uuid": "1.*",
-        "twilio/sdk": "dev-master"
+        "twilio/sdk": "dev-master",
+		"brainboxlabs/brain-socket": "^1.0"
 	},
 	"require-dev": {
 	    "way/generators": "~2.0"
