--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"cartalyst/sentry": "2.1.*",
 		"webpatser/laravel-uuid": "1.*",
         "twilio/sdk": "dev-master",
-		"pusher/pusher-php-server": "^2.2"
+		"pusher/pusher-php-server": "^2.2",
+		"intervention/image": "^2.2"
 	},
 	"require-dev": {
 	    "way/generators": "~2.0"
