--- a/public/bower.json
+++ b/public/bower.json
@@ -29,9 +29,11 @@
     "jquery-tree": "*",
     "angular-bootstrap-calendar": "~0.10.6",
     "angular-bootstrap": "~0.13.0",
-    "pusher": "~2.2.4"
+    "pusher": "~2.2.4",
+    "redactor": "*",
+    "angular-slugify": "~1.0.0"
   },
-    "install": {
-        "path": "assets"
-    }
+  "install": {
+    "path": "assets"
+  }
 }
